# DevNotes

./: .gitignore  README.md  build.gradle  custom.jks  settings.gradle  version.gradle
BeatBox/: build.gradle
BeatBox/src/main/: AndroidManifest.xml
FFmpegDemo/: build.gradle  readme.md
FFmpegDemo/src/main/: AndroidManifest.xml
FFmpegDemo/src/main/cpp/: CMakeLists.txt  ffmpegdemo.cpp
app/: README.md  app.jks  app.jks.old  build.gradle  version.gradle
app/docs/: anchor_level_bar.md
app/src/main/: AndroidManifest.xml
app/src/main/assets/: icon_like_2.json  icon_voice_wave.json  ting_icon_knowledge_like.json
app/src/main/cpp/: CMakeLists.txt  DynamicRegisterDemo.cpp  Hello.cpp  JNIAccessFieldDemo.cpp  JNIAccessMethodDemo.cpp  JNIConstructorClassDemo.cpp  JNIExceptionDemo.cpp  JNINativeMethodCallbackDemo.cpp  JNIRefType.cpp  JNIReferenceDemo.cpp  JNIThreadDemo.cpp  One.cpp  StringDemo.cpp  base.cpp  base.h  jvm.cpp  jvm.h  temp.h
app/src/main/cpp/people/: People.cpp  People.h
base/: .gitignore  build.gradle
base/src/main/: AndroidManifest.xml
base/src/main/assets/: account.json  articleLoading.json  home.json  learn.json  ting.json
doc/: mac_wiki.md  pc_other_opera.md  stormzhang_share.md  window_insets.md
doc/android_build/: readme.md
doc/android_dev_performance/: readme.md
doc/android_dev_performance/part_1/: section_1.md
doc/android_perforrmance_and_optimize/: 1-3.md  1-4.md  2-2.md  2-3.md  2-4.md  3-3.md  3-4.md  3-5.md  3-6.md  3-7.md  3-8.md  3.md  README.md
doc/android_training_camp/: c_6.md  c_7.md  c_8.md  readme.md
doc/android_training_camp/error/: compile_error.md
doc/arch/: README.md  mvp.md
doc/av/: README.md
doc/av/android_audio_video_dev/: readme.md
doc/av/android_audio_video_dev/c_and_cpp/: readme.md
doc/av/android_audio_video_dev/ffmpeg/: readme.md
doc/av/course/ffmpeg_mooc/: readme.md
doc/av/course/xiacaojun/: readme.md
doc/av/knowledge_tree/Linux/: README.md
doc/av/knowledge_tree/c_and_cpp/: readme.md
doc/av/knowledge_tree/design_pattern/: decorator.md  proxy.md  readme.md
doc/av/knowledge_tree/ffmpeg/: readme.md
doc/av/knowledge_tree/git/: readme.md
doc/av/knowledge_tree/ndk/: intro.md  readme.md
doc/av/knowledge_tree/open_GL/: README.md
doc/av/open_source_projects/: android-gpuimage.md  audio-video-recording-sample.md  exoplayer.md  grafika.md  ijkplayer.md
doc/av/systematic_study/: readme.md
doc/av/systematic_study/audio_video_format/: flv.md  m3u8.md  mp4.md  ts.md
doc/av/systematic_study/av_tools/: gui_analyse.md
doc/av/video/: README.md
doc/av/video/part2/: README.md
doc/books/: README.md
doc/books/android_advance_light/: README.md
doc/books/android_advance_light/chapter_4/: readme.md  section_3.md  section_4.md  section_5.md
doc/books/android_dev_art/: readme.md
doc/books/android_dev_art/chapter_15/: readme.md  section_1.md
doc/books/book_db/: README.md
doc/common/: android_storage.md  readme.md
doc/design_pattern/: readme.md
doc/design_pattern/struct/: decorator.md  proxy.md
doc/geek_time/effective_work_method/: c-0.md  readme.md
doc/geek_time/effective_work_method/c_1/: section_1.md
doc/geek_time/effective_work_method/c_2/: section_5.md
doc/geek_time/effective_work_method/c_3/: section_4.md
doc/hencoder/: README.md  lesson_1.md  lesson_12-1.md  lesson_12.md  lesson_6.md
doc/ide/: readme.md
doc/ide/android_studio/: android_studio.md  as_1.md  as_2.md  as_3.md  as_4.md  as_5.md
doc/ide/android_studio/gradle/: readme.md
doc/ide/visual_studio/: add_monitor.md  cat_asm_code.md  cpp_setup.md  ms_online_api_document.md  readme.md
doc/ide/visual_studio_code/: command_palette.md  cursor_move.md  line_edit.md  preview_params.md  readme.md  start_from_shell.md
doc/ide/visual_studio_code/debug_c_or_cpp/: readme.md
doc/interview/: README.md
doc/interview/enterpriser/: section_1.md
doc/interview/tips/: section_1.md  section_2.md  section_3.md  section_4.md
doc/mac/: reset_pwd_ubuntu_on_parallels-desktop.md  setup_ssh.md  setup_zsh.md
doc/material_design/: readme.md
doc/mix_dev/: 2-2.md  2-3.md  README.md
doc/multi-thread/: android-thread.md  java-thread.md  readme.md
doc/open_source_arch/: readme.md
doc/open_source_arch/okhttp/: readme.md
doc/plan/: README.md
doc/plan/2023/: apr.md  feb.md  jan.md  mar.md  new_skill.md  readme.md
doc/plan/Jul/: 7-11.md  readme.md
doc/someone_share/: caoda_share.md  readme.md
doc/svg_note/: 1.2.md  1.3.md  1.4.md  2.1.md  2.2.md  2.3.md  2.4.md  README.md
doc/tools/: readme.md
doc/tools/adb/: readme.md
doc/tools/clash/: V2Club.yaml
doc/tools/cmake/: build_multi-source.md  readme.md
doc/tools/copilot/: readme.md
doc/tools/gdb/: readme.md
doc/tools/win/: readme.md  win_cap_wiki.md  win_cpp_env.md
doc/tools/win/code/: hello.c
doc/ubuntu/: readme.md
doc/version_adapt/: README.md
doc/view_sys/: README.md  basic_line_view.md
elementary/: README.md  build.gradle
elementary/docs/: path_arc.md
elementary/docs/chapter1/: 1-1.md  1-3-Region.md  1-4-Canvas.md  1.4.1.md  1.4.2.md  path_arc.md  path_demo.md  readme.md
elementary/docs/chapter_anim/: anim_advance.md  property_anim.md  readme.md  view_animation.md
elementary/docs/chapter_anim/property_anim/: 3.1.md  3.2.md  3.3.md  3.4.md  3.5.md  3.6.md
elementary/docs/chapter_anim/view_anim/: 2.1.md  2.2.md  2.3.md  2.4.md  2.5.md
elementary/docs/chapter_draw_view/: readme.md
elementary/docs/chapter_views/: readme.md
elementary/docs/dev_art/: part_1.md  part_2.md
elementary/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
hencoder/: build.gradle  readme.md
hencoder/src/main/: AndroidManifest.xml
openGL/: build.gradle
openGL/src/main/: AndroidManifest.xml
openGL/src/main/cpp/: CMakeLists.txt  open_gl_lib.cpp
openGL/src/main/cpp/egl/: EglHelper.cpp  EglHelper.h
openGL/src/main/cpp/log/: KKAndroidLog.cpp  kkAndroidLog.h
sys/: README.md  constraint_layout.md
utils/: build.gradle
utils/src/main/: AndroidManifest.xml
work/: build.gradle
work/src/main/: AndroidManifest.xml
(+995 files in other folders)
